# bayareahiking

./: main.py  pyproject.toml  requirements.txt
.upm/: store.json
hiking/: __init__.py  data.sqlite  models.py
hiking/entrances/: forms.py  views.py
hiking/entrances/templates/entrances/: add_entrance.html  delete_entrance.py  list_hikes.html
hiking/templates/: home.html  layout.html
hiking/trails/: forms.py  views.py
hiking/trails/templates/trails/: add_trail.html
migrations/versions/: ec04e32ed985_first_version_of_the_tables.py
